src/react/styles/index.css
* {
  box-sizing: border-box;
  position: relative;
}

body, html, #root {
  margin: 0;
  padding: 0;
  height: 100%;
  width: 100%;
  overflow: hidden;
}

#layout {
  display: flex;
  flex-flow: column nowrap;
  height: 100vh;
  width: 100vw;
}

#panel-viewport {
  flex-grow: 1;
  /* flex items have min-{flex-direction}: auto - we need min-height to allow large content to shrink
     https://stackoverflow.com/a/66689926 */
  min-height: 0;
}

#panel-viewport > div {
  display: flex;
  height: 100%;
}

#reader-display-panel, #text-input-panel {
  display: flex;
  flex-direction: column;
  overflow: auto;
  text-align: left;
}

/* This would be less janky with a @container query.
   However, they only became universally supported in early 2023.
   If this doesn't seem too recent, feel free to replace this with container queries */
#text-input-panel > div {
  width: clamp(380px, 45% + 200px, 600px);
  max-width: 100%;
}

#text-input-panel {
  padding: 16px;
  align-items: center;
}

.resize-bar-vertical, .resize-bar-horizontal {
  background-color: #888;
  border-radius: 10px;
  user-select: none;
  z-index: 10;
}

.resize-bar-vertical {
  width: 5px;
  cursor: col-resize;
}

.resize-bar-horizontal {
  height: 5px;
  cursor: row-resize;
}

#reader-display-panel {
  align-items: center;
  justify-content: center;
}

#vertical-panel-container {
  flex-direction: column;
}

#horizontal-panel-container > #text-input-panel,
#horizontal-panel-container > #reader-display-panel {
  min-width: 200px;
}

#vertical-panel-container > #text-input-panel,
#vertical-panel-container > #reader-display-panel {
  min-height: 200px;
}

#zoom-container > #reader-display-panel {
  width: 100%;
  height: 100%;
  transition: transform 0.3s ease;
}

#zoom-container > #text-input-panel {
  position: absolute;
  bottom: 10px;
  right: 10px;
  width: 200px;
  height: 200px;
  padding: 4px;

  border: 2px solid #d9d9d9;
  border-radius: 10px;
}

#flashcard-container {
  perspective: 1000px;
  align-items: center;
}

#flashcard-container > #reader-display-panel,
#flashcard-container > #text-input-panel  {
  position: absolute;
  max-height: 100%;
  width: 100%;
  align-items: center;
  backface-visibility: hidden;

  transition: transform 0.0s;
}

#flashcard-container > #reader-display-panel,
#flashcard-container.flipped > #text-input-panel  {
  transform: rotateY(0deg);
}

#flashcard-container > #text-input-panel,
#flashcard-container.flipped > #reader-display-panel {
  transform: rotateY(180deg);
}

/* hides default React modal in dev environment */ 
iframe {
  display: none;
}

